Fixed the failing test cases